samples/_failures_safe/1761393450_029b82_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94377c92.c: In function ‘tokenize’:
./samples/SAFE/__tmp_94377c92.c:149:17: error: expected declaration or statement at end of input
  149 |                 token->value[1] = '\0';
      |                 ^~~~~
./samples/SAFE/__tmp_94377c92.c:149:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_94377c92.c:149:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_94377c92.c:149:17: error: expected declaration or statement at end of input
